<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".fragments.HomeFragment">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/homeShimmerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <include layout="@layout/home_shimmer_loading_placeholder" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/homeHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/bestProducts"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/homeSubHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/perfectChoice"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeHeading" />

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/search_layout_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeSubHeading">

            <ImageView
                android:id="@+id/closeSearchIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_baseline_search_24"
                app:tint="@color/black"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                app:boxBackgroundMode="none"
                app:endIconDrawable="@drawable/ic_baseline_close_24"
                app:endIconMode="clear_text"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/search"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minLines="1"
                    android:paddingTop="@dimen/_5sdp"
                    android:textColorHint="@android:color/darker_gray"
                    android:textCursorDrawable="@drawable/edit_text_cursor_drawable" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/home_chips_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:scrollbarThumbHorizontal="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchLayout">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/home_chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedChip="@+id/burgerChip"
                app:selectionRequired="true"
                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_chips_scrollview"
            app:spanCount="2"
            tools:itemCount="10"
            tools:listitem="@layout/product_item_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>